<resources>
    <string name="ADD_TIMESTAMP_DEFAULT">true</string>
    <string name="AUTO_BACKUP_DEFAULT" />
    <string name="AppURL">https://gitlab.com/toz12/medilog</string>
    <string name="BACKUP_WARNING_DEFAULT">7</string>
    <string name="BIOMETRICS_DEFAULT">false</string>
    <string name="BLOODPRESSURE_HIGHLIGHT_VALUES_DEFAULT">true</string>
    <string name="BLOODPRESSURE_LANDSCAPE_DEFAULT">false</string>
    <string name="BLOODPRESSURE_PAPER_SIZE_DEFAULT">A4</string>
    <string name="BLOODPRESSURE_TIMEZONE_DEFAULT">0-12-18</string>
    <string name="BLOODPRESSURE_UNIT_DEFAULT">mmHg</string>
    <string name="BLOODPRESURE_SHOW_LEGEND_DEFAULT">false</string>
    <string name="BLOODPRESURE_SHOW_THRESHOLD_DEFAULT">true</string>
    <string name="Copyright1">Copyright 2019–%1$s, zell-mbc.com. Licensed under GNU General Public License v3.0:</string>
    <string name="Copyright2">This application utilizes 3rd party modules:</string>
    <string name="DARK_MODE_DEFAULT">MODE_NIGHT_NO</string>
    <string name="DELIMITER_DEFAULT">,</string>
    <string name="DIARY_LANDSCAPE_DEFAULT">false</string>
    <string name="DIARY_SHOWALLTABS_DEFAULT">false</string>
    <string name="FAT_MIN_MAX_DEFAULT">14-25</string>
    <string name="GLUCOSE_HIGHLIGHT_VALUES_DEFAULT">true</string>
    <string name="GLUCOSE_SHOW_GRID_DEFAULT">true</string>
    <string name="GLUCOSE_SHOW_LEGEND_DEFAULT">false</string>
    <string name="GLUCOSE_THRESHOLDS_DEFAULT">3.3-5.6</string>
    <string name="GLUCOSE_UNIT">mmol/L</string>
    <string name="KEY_PREF_WEIGHT_BAR_CHART_DEFAULT">false</string>
    <string name="KEY_PREF_WEIGHT_DAY_STEPPING_DEFAULT">false</string>
    <string name="LOG_FAT_DEFAULT">false</string>
    <string name="LOG_HEARTRHYTHM_DEFAULT">false</string>
    <string name="LOG_KETONE_DEFAULT">false</string>
    <string name="PDF_TEXT_SIZE_DEFAULT">12</string>
    <string name="QUICKENTRY_DEFAULT">true</string>
    <string name="ROW_PADDING_DEFAULT">1</string>
    <string name="SCROLL_TABS_DEFAULT">false</string>
    <string name="SHOWTIME_DEFAULT">true</string>
    <string name="SHOW_TABICONS_DEFAULT">true</string>
    <string name="SHOW_TABTEXT_DEFAULT">false</string>
    <string name="SHOW_WATER_THRESHOLD_DEFAULT">true</string>
    <string name="SHOW_WEIGHT_GRID_DEFAULT">false</string>
    <string name="SHOW_WEIGHT_LEGEND_DEFAULT">false</string>
    <string name="SHOW_WEIGHT_THRESHOLD_DEFAULT">true</string>
    <string name="TEMPERATURE_HIGHLIGHT_VALUES_DEFAULT">true</string>
    <string name="TEMPERATURE_SHOW_GRID_DEFAULT">true</string>
    <string name="TEMPERATURE_SHOW_LEGEND_DEFAULT">false</string>
    <string name="TEMPERATURE_SHOW_THRESHOLDS_DEFAULT">true</string>
    <string name="TEMPERATURE_THRESHOLDS_CELSIUS_DEFAULT">36.5-37.5</string>
    <string name="TEMPERATURE_UNIT_DEFAULT">°C</string>
    <string name="TEXT_SIZE_DEFAULT">12</string>
    <string name="TEXT_TEMPLATES_DEFAULT">Template1\nTemplate2\nTemplate3\nTemplate4</string>
    <string name="WATER_LANDSCAPE_DEFAULT">false</string>
    <string name="WATER_PAPER_SIZE_DEFAULT">A4</string>
    <string name="WATER_SHOW_PDF_SUMMARY_DEFAULT">true</string>
    <string name="WATER_THRESHOLD_DEFAULT">2000</string>
    <string name="WATER_UNIT_DEFAULT">ml</string>
    <string name="WEIGHT_HIGHLIGHT_VALUES_DEFAULT">true</string>
    <string name="WEIGHT_LANDSCAPE_DEFAULT">false</string>
    <string name="WEIGHT_LINEAR_TRENDLINE_DEFAULT">false</string>
    <string name="WEIGHT_MOVING_AVERAGE_SIZE_DEFAULT">6</string>
    <string name="WEIGHT_MOVING_AVERAGE_TRENDLINE_DEFAULT">false</string>
    <string name="WEIGHT_PAPER_SIZE_DEFAULT">A4</string>
    <string name="WEIGHT_TARE_DEFAULT" />
    <string name="WEIGHT_THRESHOLD_DEFAULT">80</string>
    <string name="WEIGHT_UNIT_DEFAULT">kg</string>
    <string name="actionPDF">PDF Report</string>
    <string name="activeTabs">Active Tabs</string>
    <string name="activeTabsSummary">Select the values to be logged</string>
    <string name="appTheme">Dark Mode</string>
    <string name="bad">Feeling bad</string>
    <string name="barChart">Bar Chart</string>
    <string name="barChartSummary">Switch from line chart to bar chart</string>
    <string name="bloodPressureUnitSummary">Shortcut for Blood Pressure unit, default is mmHg</string>
    <string name="blue">Blue</string>
    <string name="bodyFatMinMax">Body Fat Min-Max values</string>
    <string name="bodyFatMinMaxSummary">Define the Body Fat warning levels (min-max)</string>
    <string name="chart">Chart</string>
    <string name="dayStepping">Day Steps</string>
    <string name="daySteppingSummary">Shows one bar per day on X-axis. No matter if a value exist or not</string>
    <string name="delimiter">Delimiter</string>
    <string name="emojiDefaultTextBad">Feeling bad text</string>
    <string name="emojiDefaultTextBadSummary">Default comment when adding a *feeling bad* entry</string>
    <string name="emojiDefaultTextGood">Feeling good text</string>
    <string name="emojiDefaultTextGoodSummary">Default comment when adding a *feeling good* entry</string>
    <string name="emojiDefaultTextNotGood">Not feeling good text</string>
    <string name="emojiDefaultTextNotGoodSummary">Default comment when adding a *not feeling good* entry</string>
    <string name="general">General</string>
    <string name="glucoseUnitSummary">Select mg/dL or mmol/L</string>
    <string name="good">Feeling good</string>
    <string name="grade1">Grade 1</string>
    <string name="grade1Values">140,90</string>
    <string name="grade2">Grade 2</string>
    <string name="grade2Values">160,100</string>
    <string name="grade3">Grade 3</string>
    <string name="grade3Values">180,110</string>
    <string name="height">Body Height</string>
    <string name="heightSummary">Enter body height in cm/in to allow MediLog to calculate the Body Mass Index (BMI)</string>
    <string name="highlightValues">Highlight values</string>
    <string name="highlightValuesSummaryHigh">Highlight values higher than threshold</string>
    <string name="highlightValuesSummaryRange">Highlight values lower or higher than threshold</string>
    <string name="hypotension">Hypotension</string>
    <string name="hypotensionSummary">Threshold for low blood pressure (Systolic,Diatolic)</string>
    <string name="hypotensionValue">90,60</string>
    <string name="includeOtherTabs">Include other Tabs</string>
    <string name="includeOtherTabsSummary">Blend in comments of other tabs</string>
    <string name="landscapeOrientation">Landscape</string>
    <string name="landscapeOrientationSummary">Landscape page orientation</string>
    <string name="linearTrendLine">Linear Trendlines</string>
    <string name="linearTrendlineSummary">Show linear trendlines in charts</string>
    <string name="listTextSize">Text size</string>
    <string name="listTextSizeSummary">Text size in data lists</string>
    <string name="logBodyFat">Body Fat</string>
    <string name="logBodyFatSummary">Switch logging Body Fat feature on/off</string>
    <string name="logHeartRhythm">Log Heart Rhythm</string>
    <string name="logHeartRhythmSummary">Log heart rhythm state offered by some measurement devices</string>
    <string name="logKetone">Ketone</string>
    <string name="logKetoneSummary">Switch logging Ketone on/off</string>
    <string name="movingAverageTrendLine">Moving Average Trendlines</string>
    <string name="movingAverageTrendLineSize">Moving Average size</string>
    <string name="movingAverageTrendlineSizeSummary">Number of records used to calculate the MA. The higher the value the flater the trendline. Minimum value is 2</string>
    <string name="movingAverageTrendlineSummary">Show simple Moving Average trendlines in charts. Change MA size to match your data</string>
    <string name="notGood">Not feeling good</string>
    <string name="paperSize">Paper Size</string>
    <string name="paperSizeSummary">Select paper size</string>
    <string name="pdfTextSizeSummary">Text size in data reports</string>
    <string name="prefColourOptions">Colour theme</string>
    <string name="prefColourOptionsSummary">Change application colour theme.</string>
    <string name="preferencesDelimiterSummary">Character used to separate fields for data import/export (CSV).\nAllowed characters: , ; |</string>
    <string name="preferencesGrade1Summary">Threshold for grade 1 (Systolic,Diatolic)</string>
    <string name="preferencesGrade2Summary">Threshold for grade 2 (Systolic,Diatolic)</string>
    <string name="preferencesGrade3Summary">Threshold for hypertension grade 3 (Systolic,Diatolic)</string>
    <string name="preferencesScrollableTabsSummary">Allow tabs to scroll horizontally</string>
    <string name="preferencesShowTabIconSummary">Show Icons in tab headers</string>
    <string name="preferencesShowTabTextSummary">Show Text in tab header section</string>
    <string name="preferencesUserName">Name to be printed in header section of PDF reports</string>
    <string name="preferencesWaterThresholdSummary">Targeted daily water intake</string>
    <string name="quickEntry">Quick data entry</string>
    <string name="quickEntrySummary">Enter data directly on main tab</string>
    <string name="rowPadding">Row Padding</string>
    <string name="rowPaddingSummary">Space between rows in data list</string>
    <string name="scrollableTabsText">Scrollable Tabs</string>
    <string name="showBadEmoji">Show ��</string>
    <string name="showEmojiSummary">Toggle display of emoji on/off</string>
    <string name="showGoodEmoji">Show ��︎</string>
    <string name="showGrid">Show Grid</string>
    <string name="showGridSummary">Show grid in chart</string>
    <string name="showLegend">Show Legend</string>
    <string name="showLegendSummary">Show legend in chart</string>
    <string name="showNotGoodEmoji">Show ��︎</string>
    <string name="showPulse">Show Pulse</string>
    <string name="showPulseSummary">Show Pulse values in Blood Pressure chart</string>
    <string name="showSummaryinPDF">Daily summaries in PDF report</string>
    <string name="showSummaryinPDFSummary">Switch between Daily summaries and individual entries in PDF report</string>
    <string name="showTabIcon">Show Tab Icons</string>
    <string name="showTabText">Show Tab Text</string>
    <string name="showThresholds">Show Thresholds</string>
    <string name="showThresholdsSummary">Show threshold lines in chart</string>
    <string name="showTime">Show time</string>
    <string name="showTimeSummary">Show time in date column</string>
    <string name="showValues">Show Values</string>
    <string name="showValuesSummary">If off, trendlines will be displayed instead of values</string>
    <string name="tabs">Tabs</string>
    <string name="tare">Tare</string>
    <string name="tareSummary">Automatically subtract this value after a new weight value was added</string>
    <string name="temperatureUnitSummary">Temperature unit</string>
    <string name="textTemplates">Text templates</string>
    <string name="textTemplatesSummary">Templates which get inserted in comments with #number. E.g. #2 for the second template</string>
    <string name="themeOptionsSummary">Set the Dark Mode options.</string>
    <string name="threshold">Threshold</string>
    <string name="thresholdSummaryRange">Define minimum and maximum values</string>
    <string name="thresholdSummaryUpper">Define maximum threshold</string>
    <string name="thresholds">Thresholds</string>
    <string name="timezones">Timezones</string>
    <string name="timezonesSummary">Hours defining Morning-Midday-Evening columns</string>
    <string name="unit">Unit</string>
    <string name="userName">User name</string>
    <string name="userNameDefault">Your name</string>
    <string name="waterUnitSummary">Shortcut for water unit, default is ml</string>
    <string name="weightUnitSummary">Shortcut for weight unit, default is kg</string>
</resources>