<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"> xmlns:app=&quot;http://schemas.android.com/apk/res-auto&quot;&gt; 
    <PreferenceCategory android:title="@string/general">
        <EditTextPreference android:text="@string/grade1Values" android:selectAllOnFocus="true" android:digits="0123456789," android:title="@string/grade1" android:key="grade1" android:summary="@string/preferencesGrade1Summary" android:defaultValue="@string/grade1Values"/>
        <EditTextPreference android:text="@string/grade2Values" android:selectAllOnFocus="true" android:title="@string/grade2" android:key="grade2" android:summary="@string/preferencesGrade2Summary" android:defaultValue="@string/grade2Values"/>
        <EditTextPreference android:text="@string/grade3Values" android:selectAllOnFocus="true" android:title="@string/grade3" android:key="grade3" android:summary="@string/preferencesGrade3Summary" android:defaultValue="@string/grade3Values"/>
        <EditTextPreference android:text="@string/hypotensionValue" android:selectAllOnFocus="true" android:title="@string/hypotension" android:key="etHypotension" android:summary="@string/hypotensionSummary" android:defaultValue="@string/hypotensionValue"/>
        <SwitchPreference android:title="@string/showTime" android:key="swBloodPressureShowtime" android:summary="@string/showTimeSummary" android:defaultValue="@string/SHOWTIME_DEFAULT"/>
        <SwitchPreference android:title="@string/highlightValues" android:key="cbBloodPressureHighlightValues" android:summary="@string/highlightValuesSummaryRange" android:defaultValue="@string/BLOODPRESSURE_HIGHLIGHT_VALUES_DEFAULT"/>
        <EditTextPreference android:text="mmHg" android:singleLine="true" android:selectAllOnFocus="true" android:title="@string/unit" android:key="etBloodPressureUnit" android:summary="@string/bloodPressureUnitSummary" android:defaultValue="mmHg"/>
        <SwitchPreference android:title="@string/logHeartRhythm" android:key="cbLogHeartRhythm" android:summary="@string/logHeartRhythmSummary" android:defaultValue="@string/LOG_HEARTRHYTHM_DEFAULT"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/actionPDF">
        <SwitchPreference android:title="@string/landscapeOrientation" android:key="cbBloodPressureLandscape" android:summary="@string/landscapeOrientationSummary" android:defaultValue="false"/>
        <ListPreference android:entries="@array/paperSizes" android:title="@string/paperSize" android:key="liBloodPressurePageSize" android:summary="@string/paperSizeSummary" android:defaultValue="A4" android:entryValues="@array/paperSizes"/>
        <EditTextPreference android:title="@string/timezones" android:key="etTimezones" android:summary="@string/timezonesSummary" android:defaultValue="@string/BLOODPRESSURE_TIMEZONE_DEFAULT"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/chart">
        <SwitchPreference android:title="@string/showPulse" android:key="cbShowPulse" android:summary="@string/showPulseSummary" android:defaultValue="false"/>
        <SwitchPreference android:title="@string/showThresholds" android:key="cbShowBloodPressureThreshold" android:summary="@string/showThresholdsSummary" android:defaultValue="@string/BLOODPRESURE_SHOW_THRESHOLD_DEFAULT"/>
        <SwitchPreference android:title="@string/showGrid" android:key="cbShowBloodPressureGrid" android:summary="@string/showGridSummary" android:defaultValue="true"/>
        <SwitchPreference android:title="@string/showLegend" android:key="cbShowBloodPressureLegend" android:summary="@string/showLegendSummary" android:defaultValue="@string/BLOODPRESURE_SHOW_LEGEND_DEFAULT"/>
        <SwitchPreference android:title="@string/showValues" android:key="cbBloodPressureShowValues" android:summary="@string/showValuesSummary" android:defaultValue="true"/>
        <SwitchPreference android:title="@string/linearTrendLine" android:key="cbBloodPressureLinearTrendline" android:summary="@string/linearTrendlineSummary" android:defaultValue="false"/>
        <SwitchPreference android:title="@string/movingAverageTrendLine" android:key="cbBloodPressureMovingAverageTrendline" android:summary="@string/movingAverageTrendlineSummary" android:defaultValue="false"/>
        <EditTextPreference android:selectAllOnFocus="true" android:title="@string/movingAverageTrendLineSize" android:key="etBloodPressureMovingAverageSize" android:summary="@string/movingAverageTrendlineSizeSummary" android:defaultValue="6" android:inputType="number"/>
        <SwitchPreference android:title="@string/barChart" android:key="cbBloodPressureBarChart" android:summary="@string/barChartSummary" android:defaultValue="false"/>
        <SwitchPreference android:title="@string/dayStepping" android:key="cbBloodPressureDayStepping" android:summary="@string/daySteppingSummary" android:defaultValue="false"/>
    </PreferenceCategory>
</PreferenceScreen>
