<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"> xmlns:app=&quot;http://schemas.android.com/apk/res-auto&quot;&gt; 
    <PreferenceCategory android:title="@string/general">
        <EditTextPreference android:text="80" android:selectAllOnFocus="true" android:title="@string/threshold" android:key="evWaterThreshold" android:summary="@string/preferencesWaterThresholdSummary" android:defaultValue="@string/WATER_THRESHOLD_DEFAULT" android:inputType="number"/>
        <EditTextPreference android:text="kg" android:singleLine="true" android:selectAllOnFocus="true" android:title="@string/unit" android:key="evWaterUnit" android:summary="@string/waterUnitSummary" android:defaultValue="@string/WATER_UNIT_DEFAULT"/>
        <SwitchPreference android:title="@string/showTime" android:key="swWaterShowtime" android:summary="@string/showTimeSummary" android:defaultValue="@string/SHOWTIME_DEFAULT"/>
        <SwitchPreference android:title="@string/showSummaryinPDF" android:key="swShowSummaryinPDF" android:summary="@string/showSummaryinPDFSummary" android:defaultValue="@string/WATER_SHOW_PDF_SUMMARY_DEFAULT"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/actionPDF">
        <SwitchPreference android:title="@string/landscapeOrientation" android:key="cbWaterLandscape" android:summary="@string/landscapeOrientationSummary" android:defaultValue="@string/WATER_LANDSCAPE_DEFAULT"/>
        <ListPreference android:entries="@array/paperSizes" android:title="@string/paperSize" android:key="liWaterPaperSize" android:summary="@string/paperSizeSummary" android:defaultValue="@string/WATER_PAPER_SIZE_DEFAULT" android:entryValues="@array/paperSizes"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/chart">
        <SwitchPreference android:title="@string/showThresholds" android:key="cbShowWaterThreshold" android:summary="@string/showThresholdsSummary" android:defaultValue="@string/SHOW_WATER_THRESHOLD_DEFAULT"/>
        <SwitchPreference android:title="@string/showGrid" android:key="cbShowWaterGrid" android:summary="@string/showGridSummary" android:defaultValue="true"/>
        <SwitchPreference android:title="@string/showLegend" android:key="cbShowWaterLegend" android:summary="@string/showLegendSummary" android:defaultValue="false"/>
        <SwitchPreference android:title="@string/barChart" android:key="cbWaterBarChart" android:summary="@string/barChartSummary" android:defaultValue="true"/>
        <SwitchPreference android:title="@string/dayStepping" android:key="cbWaterDayStepping" android:summary="@string/daySteppingSummary" android:defaultValue="false"/>
    </PreferenceCategory>
</PreferenceScreen>
