<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"> xmlns:app=&quot;http://schemas.android.com/apk/res-auto&quot;&gt; 
    <PreferenceCategory android:title="@string/general">
        <EditTextPreference android:text="@string/TEMPERATURE_THRESHOLDS_CELSIUS_DEFAULT" android:selectAllOnFocus="true" android:title="@string/thresholds" android:key="etTemperatureThresholds" android:summary="@string/thresholdSummaryRange" android:defaultValue="@string/TEMPERATURE_THRESHOLDS_CELSIUS_DEFAULT" android:inputType="text"/>
        <SwitchPreference android:title="@string/showTime" android:key="swTemperatureShowtime" android:summary="@string/showTimeSummary" android:defaultValue="@string/SHOWTIME_DEFAULT"/>
        <SwitchPreference android:title="@string/highlightValues" android:key="cbTemperatureHighlightValues" android:summary="@string/highlightValuesSummaryRange" android:defaultValue="@string/TEMPERATURE_HIGHLIGHT_VALUES_DEFAULT"/>
        <ListPreference android:entries="@array/temperatureUnits" android:title="@string/unit" android:key="etTemperatureUnit" android:summary="@string/temperatureUnitSummary" android:defaultValue="@string/TEMPERATURE_UNIT_DEFAULT" android:entryValues="@array/temperatureUnits"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/actionPDF">
        <SwitchPreference android:title="@string/landscapeOrientation" android:key="cbTemperatureLandscape" android:summary="@string/landscapeOrientationSummary" android:defaultValue="false"/>
        <ListPreference android:entries="@array/paperSizes" android:title="@string/paperSize" android:key="liTemperaturePaperSize" android:summary="@string/paperSizeSummary" android:defaultValue="A4" android:entryValues="@array/paperSizes"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/chart">
        <SwitchPreference android:title="@string/showThresholds" android:key="cbShowTemperatureThresholds" android:summary="@string/showThresholdsSummary" android:defaultValue="@string/TEMPERATURE_SHOW_THRESHOLDS_DEFAULT"/>
        <SwitchPreference android:title="@string/showGrid" android:key="cbShowTemperatureGrid" android:summary="@string/showGridSummary" android:defaultValue="@string/TEMPERATURE_SHOW_GRID_DEFAULT"/>
        <SwitchPreference android:title="@string/showLegend" android:key="cbShowTemperatureLegend" android:summary="@string/showLegendSummary" android:defaultValue="@string/TEMPERATURE_SHOW_LEGEND_DEFAULT"/>
    </PreferenceCategory>
</PreferenceScreen>
