<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"> xmlns:app=&quot;http://schemas.android.com/apk/res-auto&quot;&gt; 
    <PreferenceCategory android:title="@string/general">
        <SwitchPreference android:title="@string/includeOtherTabs" android:key="cbShowAllTabs" android:summary="@string/includeOtherTabsSummary" android:defaultValue="@string/DIARY_SHOWALLTABS_DEFAULT"/>
        <SwitchPreference android:title="@string/showTime" android:key="swDiaryShowtime" android:summary="@string/showTimeSummary" android:defaultValue="@string/SHOWTIME_DEFAULT"/>
        <SwitchPreference android:title="@string/showGoodEmoji" android:key="swShowGoodEmoji" android:summary="@string/showEmojiSummary" android:defaultValue="false"/>
        <SwitchPreference android:title="@string/showNotGoodEmoji" android:key="swShowNotGoodEmoji" android:summary="@string/showEmojiSummary" android:defaultValue="true"/>
        <SwitchPreference android:title="@string/showBadEmoji" android:key="swShowBadEmoji" android:summary="@string/showEmojiSummary" android:defaultValue="true"/>
        <EditTextPreference android:text="15" android:title="@string/emojiDefaultTextGood" android:key="etGood" android:summary="@string/emojiDefaultTextGoodSummary" android:defaultValue="@string/good" android:inputType="text"/>
        <EditTextPreference android:text="15" android:title="@string/emojiDefaultTextNotGood" android:key="etNotGood" android:summary="@string/emojiDefaultTextNotGoodSummary" android:defaultValue="@string/notGood" android:inputType="text"/>
        <EditTextPreference android:text="15" android:title="@string/emojiDefaultTextBad" android:key="etBad" android:summary="@string/emojiDefaultTextBadSummary" android:defaultValue="@string/bad" android:inputType="text"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/actionPDF">
        <SwitchPreference android:title="@string/landscapeOrientation" android:key="cbDiaryLandscape" android:summary="@string/landscapeOrientationSummary" android:defaultValue="@string/DIARY_LANDSCAPE_DEFAULT"/>
        <ListPreference android:entries="@array/paperSizes" android:title="@string/paperSize" android:key="liDiaryPageSize" android:summary="@string/paperSizeSummary" android:defaultValue="A4" android:entryValues="@array/paperSizes"/>
    </PreferenceCategory>
</PreferenceScreen>
