<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"> xmlns:app=&quot;http://schemas.android.com/apk/res-auto&quot;&gt; 
    <PreferenceCategory android:title="@string/general">
        <SwitchPreference android:title="@string/quickEntry" android:key="quickEntry" android:summary="@string/quickEntrySummary" android:defaultValue="@string/QUICKENTRY_DEFAULT"/>
        <ListPreference android:entries="@array/themeStrings" android:title="@string/appTheme" android:key="lpAppTheme" android:summary="@string/themeOptionsSummary" android:defaultValue="@string/DARK_MODE_DEFAULT" android:entryValues="@array/themeValues"/>
        <ListPreference android:entries="@array/colorOptionsStrings" android:title="@string/prefColourOptions" android:key="colourStyle" android:summary="@string/prefColourOptionsSummary" android:defaultValue="@string/blue" android:entryValues="@array/colorOptionsValues"/>
        <EditTextPreference android:text="15" android:selectAllOnFocus="true" android:maxLength="2" android:title="@string/listTextSize" android:key="listTextSize" android:summary="@string/listTextSizeSummary" android:defaultValue="@string/TEXT_SIZE_DEFAULT" android:inputType="number"/>
        <EditTextPreference android:text="@string/ROW_PADDING_DEFAULT" android:selectAllOnFocus="true" android:maxLength="1" android:title="@string/rowPadding" android:key="etRowPadding" android:summary="@string/rowPaddingSummary" android:defaultValue="@string/ROW_PADDING_DEFAULT" android:inputType="number"/>
        <EditTextPreference android:text="" android:selectAllOnFocus="true" android:title="@string/delimiter" android:key="delimiter" android:summary="@string/preferencesDelimiterSummary" android:defaultValue="@string/DELIMITER_DEFAULT"/>
        <EditTextPreference android:text="" android:selectAllOnFocus="true" android:title="@string/textTemplates" android:key="etTextTemplates" android:summary="@string/textTemplatesSummary" android:defaultValue="@string/TEXT_TEMPLATES_DEFAULT"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/actionPDF">
        <EditTextPreference android:text="" android:selectAllOnFocus="true" android:title="@string/userName" android:key="userName" android:summary="@string/preferencesUserName" android:defaultValue="@string/userNameDefault"/>
        <EditTextPreference android:text="15" android:selectAllOnFocus="true" android:maxLength="2" android:title="@string/listTextSize" android:key="etPdfTextSize" android:summary="@string/pdfTextSizeSummary" android:defaultValue="@string/PDF_TEXT_SIZE_DEFAULT" android:inputType="number"/>
    </PreferenceCategory>
</PreferenceScreen>
